# Agency-Os-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
docs/: agency_os_master_spec.md  approval_workflows.md  automation_builder.md  automation_simulation.md  autonomous_operations.md  chatter_workflows.md  codex_context.md  confidence_engine.md  coo_layer.md  creator_watch.md  daily_digest.md  database_schema.md  disaster_recovery_runbook.md  event_architecture.md  first_day_plan.md  help_brain.md  help_copilot.md  intelligence_brain.md  intelligence_verification.md  learning_engine.md  learning_verification.md  manager_activation.md  mobile_live_qa.md  mobile_owner_qa.md  navigation_qa_report.md  notification_routing.md  onboarding.md  onboarding_localization.md  opportunity_command_center.md  opportunity_intelligence.md  opportunity_workflows.md  outcome_memory.md  pattern_recognition.md  pilot_readiness.md  playbook_memory.md  postgres_recovery_plan.md  product_qa_report.md  production_observability.md  production_operations.md  production_persistence_report.md  (+22 more)
scripts/: export_sqlite_backup.py  verify_railway.py
tests/: test_accounts.py  test_agency_drift_detection.py  test_audit.py  test_command_center_ux.py  test_database_url.py  test_emergency_callback_stability.py  test_emergency_duplicate_poller_guard.py  test_emergency_proxy_cleanup.py  test_emergency_recovery_responsiveness.py  test_executive_intelligence.py  test_health_endpoint_resilience.py  test_models.py  (+70 more)
(+215 files in other folders)
