[project]
name = "agency-os-bot"
version = "0.1.0"
description = "Secure FastAPI and aiogram foundation for Agency OS Bot."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "cryptography>=42,<49",
    "fastapi>=0.111,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.3,<3",
    "redis>=5,<6",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["work*", "outputs*", "tests*", "alembic*"]

[tool.ruff]
line-length = 100
target-version = "py312"
